# RustZip

./: Cargo.toml  README.md  foldergen.py
compressed_data/folder_0/: file_0.zst  file_1.zst  file_2.zst  file_3.zst  file_4.zst  file_5.zst  file_6.zst  file_7.zst  file_8.zst  file_9.zst
compressed_data/folder_1/: file_0.zst  file_1.zst  file_2.zst  file_3.zst  file_4.zst  file_5.zst  file_6.zst  file_7.zst  file_8.zst  file_9.zst
compressed_data/folder_2/: file_0.zst  file_1.zst  file_2.zst  file_3.zst  file_4.zst  file_5.zst  file_6.zst  file_7.zst  file_8.zst  file_9.zst
compressed_data/folder_3/: file_0.zst  file_1.zst  file_2.zst  file_3.zst  file_4.zst  file_5.zst  file_6.zst  file_7.zst  file_8.zst  file_9.zst
compressed_data/folder_4/: file_0.zst  file_1.zst  file_2.zst  file_3.zst  file_4.zst  file_5.zst  file_6.zst  file_7.zst  file_8.zst  file_9.zst
src/: cli.rs  compressor.rs  main.rs
tests/: edge_cases.rs  integration_folder.rs  unit_basic.rs  various_sizes.rs
