[package]
name = "parallel_compressor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.42", features = ["derive"]}
rayon = "1.10.0"
zstd = "0.13.3"
indicatif = "0.18.0"
anyhow = "1.0.98"
colored = "3.0.0"
walkdir = "2.5.0"
tar = "0.4.44"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.21.0"
flate2 = "1.0"
lz4_flex = "0.11"